# OpenPB

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  data.json  network.json  run.ps1  run.sh  run_sample.ps1  run_sample.sh  rustfmt.toml  sample_network.json  values.json
.github/workflows/: build.yml  clippy.yml
src/: args.rs  cli.yml  deserialize_json.rs  main.rs  network.json  parse_json.rs  trainer.rs
src/file_io/: json_de.rs  mod.rs  parse_json.rs  results_ser.rs  save_output.rs
src/nn/: activation.rs  activations.rs  cost.rs  costs.rs  encoder.rs  layer.rs  metric.rs  metrics.rs  mod.rs  network.rs  optimizer.rs  optimizers.rs  perceptron.rs
src/nn/functions/: activation.rs  cost.rs  encoder.rs  metric.rs  mod.rs  optimizer.rs
src/nn/functions/util/: dyn_clone.rs  mod.rs
