[package]
name = "nn"
version = "1.0.0"
authors = ["dakatk <dakatk97@gmail.com>"]
edition = "2018"

# Per-OS dependencies don't seem to be working right now:
# [target.'cfg(target_os = "macos")'.dependencies]
# blas-src = { version = "0.2.0", default-features = false, features = ["accelerate"] }
# [target.'cfg(target_os = "macos")'.dependencies.ndarray]
# version = "0.13.0"
# features = ["blas", "approx", "serde"]

[dependencies]
rand = "0.8.5"
approx = "0.5.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
ndarray = { version = "0.15.6", features = ["approx", "serde"] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.0"
clap = "3.2.17"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3