[package]
name = "open_pb"
version = "1.0.0"
authors = ["dakatk <dakatk97@gmail.com>"]
edition = "2018"

[dependencies]
# xlsxwriter = "0.4.0"
rand = "0.8.5"
approx = "0.5.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
ndarray = { version = "0.15.6", features = ["approx", "serde"] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.0"
clap = { version = "3.2.17", features = ["derive"] }
chrono = "0.4.22"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3